src/org/codehaus/groovy/aop/pattern/impl/GaptParser.java
// $ANTLR 3.1.1 C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g 2009-02-04 09:50:48

package org.codehaus.groovy.aop.pattern.impl;

import org.codehaus.groovy.aop.pattern.Pattern;
import org.codehaus.groovy.aop.pattern.MethodPattern;
import org.codehaus.groovy.aop.pattern.TypePattern;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.runtime.debug.*;
import java.io.IOException;
public class GaptParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Identifier", "Letter", "JavaIDDigit", "WS", "'.'", "'+'", "'('", "')'", "','", "'*'", "'public'", "'private'", "'protected'", "'boolean'", "'byte'", "'char'", "'double'", "'float'", "'int'", "'long'", "'short'", "'void'", "'..'"
    };
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int EOF=-1;
    public static final int T__9=9;
    public static final int T__8=8;
    public static final int Identifier=4;
    public static final int T__19=19;
    public static final int WS=7;
    public static final int T__16=16;
    public static final int T__15=15;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int T__12=12;
    public static final int T__11=11;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int T__10=10;
    public static final int JavaIDDigit=6;
    public static final int Letter=5;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "methodPattern", "synpred15_Gapt", "synpred18_Gapt", 
        "synpred16_Gapt", "synpred13_Gapt", "pattern", "synpred7_Gapt", 
        "synpred3_Gapt", "modifier", "synpred10_Gapt", "synpred2_Gapt", 
        "returnTypePattern", "synpred1_Gapt", "synpred4_Gapt", "synpred8_Gapt", 
        "synpred17_Gapt", "synpred28_Gapt", "synpred26_Gapt", "synpred24_Gapt", 
        "synpred23_Gapt", "synpred25_Gapt", "synpred19_Gapt", "synpred27_Gapt", 
        "synpred22_Gapt", "primitive", "synpred6_Gapt", "synpred20_Gapt", 
        "synpred5_Gapt", "synpred14_Gapt", "classPattern", "synpred11_Gapt", 
        "qualifiedName", "argTypes", "className", "synpred9_Gapt", "synpred21_Gapt", 
        "synpred12_Gapt", "modifiers"
    };
     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public GaptParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public GaptParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this, port, null);
            setDebugListener(proxy);
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
        }
    public GaptParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg, new RecognizerSharedState());

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }


    public String[] getTokenNames() { return GaptParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g"; }



    // $ANTLR start "pattern"
    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:17:1: pattern returns [Pattern pt] : ( (mep= methodPattern ) | (rtp= returnTypePattern ) (mep= methodPattern ) | (mod= modifiers ) (rtp= returnTypePattern ) (mep= methodPattern ) );
    public final Pattern pattern() throws RecognitionException {
        Pattern pt = null;

        MethodPattern mep = null;

        TypePattern rtp = null;

        List<String> mod = null;



          pt = new Pattern();

        try { dbg.enterRule(getGrammarFileName(), "pattern");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(17, 1);

        try {
            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:21:5: ( (mep= methodPattern ) | (rtp= returnTypePattern ) (mep= methodPattern ) | (mod= modifiers ) (rtp= returnTypePattern ) (mep= methodPattern ) )
            int alt1=3;
            try { dbg.enterDecision(1);

            try {
                isCyclicDecision = true;
                alt1 = dfa1.predict(input);
            }
            catch (NoViableAltException nvae) {
                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(1);}

            switch (alt1) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:22:9: (mep= methodPattern )
                    {
                    dbg.location(22,9);
                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:22:9: (mep= methodPattern )
                    dbg.enterAlt(1);

                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:22:10: mep= methodPattern
                    {
                    dbg.location(22,13);
                    pushFollow(FOLLOW_methodPattern_in_pattern65);
                    mep=methodPattern();

                    state._fsp--;
                    if (state.failed) return pt;
                    dbg.location(22,32);
                    if ( state.backtracking==0 ) {
                       pt.setMethodPattern(mep); 
                    }

                    }


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:24:7: (rtp= returnTypePattern ) (mep= methodPattern )
                    {
                    dbg.location(24,7);
                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:24:7: (rtp= returnTypePattern )
                    dbg.enterAlt(1);

                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:24:8: rtp= returnTypePattern
                    {
                    dbg.location(24,11);
                    pushFollow(FOLLOW_returnTypePattern_in_pattern92);
                    rtp=returnTypePattern();

                    state._fsp--;
                    if (state.failed) return pt;
                    dbg.location(24,30);
                    if ( state.backtracking==0 ) {
                       pt.setReturnTypePattern(rtp); 
                    }

                    }

                    dbg.location(25,9);
                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:25:9: (mep= methodPattern )
                    dbg.enterAlt(1);

                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:25:10: mep= methodPattern
                    {
                    dbg.location(25,13);
                    pushFollow(FOLLOW_methodPattern_in_pattern108);
                    mep=methodPattern();

                    state._fsp--;
                    if (state.failed) return pt;
                    dbg.location(25,32);
                    if ( state.backtracking==0 ) {
                       pt.setMethodPattern(mep); 
                    }

                    }


                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:27:7: (mod= modifiers ) (rtp= returnTypePattern ) (mep= methodPattern )
                    {
                    dbg.location(27,7);
                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:27:7: (mod= modifiers )
                    dbg.enterAlt(1);

                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:27:8: mod= modifiers
                    {
                    dbg.location(27,11);
                    pushFollow(FOLLOW_modifiers_in_pattern128);
                    mod=modifiers();

                    state._fsp--;
                    if (state.failed) return pt;
                    dbg.location(27,30);
                    if ( state.backtracking==0 ) {
                       pt.setModifiers(mod); 
                    }

                    }

                    dbg.location(28,9);
                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:28:9: (rtp= returnTypePattern )
                    dbg.enterAlt(1);

                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:28:10: rtp= returnTypePattern
                    {
                    dbg.location(28,13);
                    pushFollow(FOLLOW_returnTypePattern_in_pattern153);
                    rtp=returnTypePattern();

                    state._fsp--;
                    if (state.failed) return pt;
                    dbg.location(28,32);
                    if ( state.backtracking==0 ) {
                       pt.setReturnTypePattern(rtp); 
                    }

                    }

                    dbg.location(29,9);
                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:29:9: (mep= methodPattern )
                    dbg.enterAlt(1);

                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:29:10: mep= methodPattern
                    {
                    dbg.location(29,13);
                    pushFollow(FOLLOW_methodPattern_in_pattern169);
                    mep=methodPattern();

                    state._fsp--;
                    if (state.failed) return pt;
                    dbg.location(29,32);
                    if ( state.backtracking==0 ) {
                       pt.setMethodPattern(mep); 
                    }

                    }


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(30, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "pattern");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return pt;
    }
    // $ANTLR end "pattern"


    // $ANTLR start "methodPattern"
    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:33:1: methodPattern returns [MethodPattern mep] : ( (i= Identifier ) ( '.' i= Identifier )* ( '+' )? '.' (i= Identifier ) ( '(' (a= argTypes )? ')' )? | (i= Identifier ) ( '.' i= Identifier )* ( '(' (a= argTypes )? ')' )? ) ;
    public final MethodPattern methodPattern() throws RecognitionException {
        MethodPattern mep = null;

        Token i=null;
        List<TypePattern> a = null;



          mep = new MethodPattern();
          List<String> names = new ArrayList<String>();
          boolean subClass = false;
          boolean mayBeProperty = true;

        try { dbg.enterRule(getGrammarFileName(), "methodPattern");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(33, 1);

        try {
            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:40:5: ( ( (i= Identifier ) ( '.' i= Identifier )* ( '+' )? '.' (i= Identifier ) ( '(' (a= argTypes )? ')' )? | (i= Identifier ) ( '.' i= Identifier )* ( '(' (a= argTypes )? ')' )? ) )
            dbg.enterAlt(1);

            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:41:5: ( (i= Identifier ) ( '.' i= Identifier )* ( '+' )? '.' (i= Identifier ) ( '(' (a= argTypes )? ')' )? | (i= Identifier ) ( '.' i= Identifier )* ( '(' (a= argTypes )? ')' )? )
            {
            dbg.location(41,5);
            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:41:5: ( (i= Identifier ) ( '.' i= Identifier )* ( '+' )? '.' (i= Identifier ) ( '(' (a= argTypes )? ')' )? | (i= Identifier ) ( '.' i= Identifier )* ( '(' (a= argTypes )? ')' )? )
            int alt9=2;
            try { dbg.enterSubRule(9);
            try { dbg.enterDecision(9);

            int LA9_0 = input.LA(1);

            if ( (LA9_0==Identifier) ) {
                switch ( input.LA(2) ) {
                case 8:
                    {
                    int LA9_2 = input.LA(3);

                    if ( (synpred7_Gapt()) ) {
                        alt9=1;
                    }
                    else if ( (true) ) {
                        alt9=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return mep;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 9, 2, input);

                        dbg.recognitionException(nvae);
                        throw nvae;
                    }
                    }
                    break;
                case EOF:
                case 10:
                    {
                    alt9=2;
                    }
                    break;
                case 9:
                    {
                    alt9=1;
                    }
                    break;
                default:
                    if (state.backtracking>0) {state.failed=true; return mep;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;
                }

            }
            else {
                if (state.backtracking>0) {state.failed=true; return mep;}
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(9);}

            switch (alt9) {
                case 1 :
                    dbg.enterAlt(1);

                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:42:9: (i= Identifier ) ( '.' i= Identifier )* ( '+' )? '.' (i= Identifier ) ( '(' (a= argTypes )? ')' )?
                    {
                    dbg.location(42,9);
                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:42:9: (i= Identifier )
                    dbg.enterAlt(1);

                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:42:10: i= Identifier
                    {
                    dbg.location(42,11);
                    i=(Token)match(input,Identifier,FOLLOW_Identifier_in_methodPattern221); if (state.failed) return mep;
                    dbg.location(42,22);
                    if ( state.backtracking==0 ) {
                      names.add((i!=null?i.getText():null));
                    }

                    }

                    dbg.location(43,13);
                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:43:13: ( '.' i= Identifier )*
                    try { dbg.enterSubRule(2);

                    loop2:
                    do {
                        int alt2=2;
                        try { dbg.enterDecision(2);

                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==8) ) {
                            int LA2_2 = input.LA(2);

                            if ( (LA2_2==Identifier) ) {
                                int LA2_3 = input.LA(3);

                                if ( (synpred3_Gapt()) ) {
                                    alt2=1;
                                }


                            }


                        }


                        } finally {dbg.exitDecision(2);}

                        switch (alt2) {
                    	case 1 :
                    	    dbg.enterAlt(1);

                    	    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:43:14: '.' i= Identifier
                    	    {
                    	    dbg.location(43,14);
                    	    match(input,8,FOLLOW_8_in_methodPattern238); if (state.failed) return mep;
                    	    dbg.location(43,19);
                    	    i=(Token)match(input,Identifier,FOLLOW_Identifier_in_methodPattern242); if (state.failed) return mep;
                    	    dbg.location(43,30);
                    	    if ( state.backtracking==0 ) {
                    	      names.add((i!=null?i.getText():null));
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);
                    } finally {dbg.exitSubRule(2);}

                    dbg.location(44,13);
                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:44:13: ( '+' )?
                    int alt3=2;
                    try { dbg.enterSubRule(3);
                    try { dbg.enterDecision(3);

                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==9) ) {
                        alt3=1;
                    }
                    } finally {dbg.exitDecision(3);}

                    switch (alt3) {
                        case 1 :
                            dbg.enterAlt(1);

                            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:44:14: '+'
                            {
                            dbg.location(44,14);
                            match(input,9,FOLLOW_9_in_methodPattern260); if (state.failed) return mep;
                            dbg.location(44,18);
                            if ( state.backtracking==0 ) {
                               subClass = true; 
                            }

                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(3);}

                    dbg.location(45,13);
                    match(input,8,FOLLOW_8_in_methodPattern278); if (state.failed) return mep;
                    dbg.location(46,13);
                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:46:13: (i= Identifier )
                    dbg.enterAlt(1);

                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:46:14: i= Identifier
                    {
                    dbg.location(46,15);
                    i=(Token)match(input,Identifier,FOLLOW_Identifier_in_methodPattern295); if (state.failed) return mep;
                    dbg.location(46,26);
                    if ( state.backtracking==0 ) {
                      names.add((i!=null?i.getText():null));
                    }

                    }

                    dbg.location(47,13);
                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:47:13: ( '(' (a= argTypes )? ')' )?
                    int alt5=2;
                    try { dbg.enterSubRule(5);
                    try { dbg.enterDecision(5);

                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==10) ) {
                        alt5=1;
                    }
                    } finally {dbg.exitDecision(5);}

                    switch (alt5) {
                        case 1 :
                            dbg.enterAlt(1);

                            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:47:14: '(' (a= argTypes )? ')'
                            {
                            dbg.location(47,14);
                            match(input,10,FOLLOW_10_in_methodPattern312); if (state.failed) return mep;
                            dbg.location(47,18);
                            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:47:18: (a= argTypes )?
                            int alt4=2;
                            try { dbg.enterSubRule(4);
                            try { dbg.enterDecision(4);

                            int LA4_0 = input.LA(1);

                            if ( (LA4_0==Identifier||LA4_0==13||(LA4_0>=17 && LA4_0<=26)) ) {
                                alt4=1;
                            }
                            } finally {dbg.exitDecision(4);}

                            switch (alt4) {
                                case 1 :
                                    dbg.enterAlt(1);

                                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:47:19: a= argTypes
                                    {
                                    dbg.location(47,20);
                                    pushFollow(FOLLOW_argTypes_in_methodPattern317);
                                    a=argTypes();

                                    state._fsp--;
                                    if (state.failed) return mep;
                                    dbg.location(47,30);
                                    if ( state.backtracking==0 ) {
                                      mep.setArgTypePatterns(a);
                                    }

                                    }
                                    break;

                            }
                            } finally {dbg.exitSubRule(4);}

                            dbg.location(47,62);
                            match(input,11,FOLLOW_11_in_methodPattern324); if (state.failed) return mep;
                            dbg.location(47,66);
                            if ( state.backtracking==0 ) {
                              mayBeProperty=false;
                            }

                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(5);}


                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:49:9: (i= Identifier ) ( '.' i= Identifier )* ( '(' (a= argTypes )? ')' )?
                    {
                    dbg.location(49,9);
                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:49:9: (i= Identifier )
                    dbg.enterAlt(1);

                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:49:10: i= Identifier
                    {
                    dbg.location(49,11);
                    i=(Token)match(input,Identifier,FOLLOW_Identifier_in_methodPattern347); if (state.failed) return mep;
                    dbg.location(49,22);
                    if ( state.backtracking==0 ) {
                      names.add((i!=null?i.getText():null));
                    }

                    }

                    dbg.location(50,13);
                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:50:13: ( '.' i= Identifier )*
                    try { dbg.enterSubRule(6);

                    loop6:
                    do {
                        int alt6=2;
                        try { dbg.enterDecision(6);

                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==8) ) {
                            alt6=1;
                        }


                        } finally {dbg.exitDecision(6);}

                        switch (alt6) {
                    	case 1 :
                    	    dbg.enterAlt(1);

                    	    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:50:14: '.' i= Identifier
                    	    {
                    	    dbg.location(50,14);
                    	    match(input,8,FOLLOW_8_in_methodPattern364); if (state.failed) return mep;
                    	    dbg.location(50,19);
                    	    i=(Token)match(input,Identifier,FOLLOW_Identifier_in_methodPattern368); if (state.failed) return mep;
                    	    dbg.location(50,30);
                    	    if ( state.backtracking==0 ) {
                    	      names.add((i!=null?i.getText():null));
                    	    }

                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);
                    } finally {dbg.exitSubRule(6);}

                    dbg.location(51,13);
                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:51:13: ( '(' (a= argTypes )? ')' )?
                    int alt8=2;
                    try { dbg.enterSubRule(8);
                    try { dbg.enterDecision(8);

                    int LA8_0 = input.LA(1);

                    if ( (LA8_0==10) ) {
                        alt8=1;
                    }
                    } finally {dbg.exitDecision(8);}

                    switch (alt8) {
                        case 1 :
                            dbg.enterAlt(1);

                            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:51:14: '(' (a= argTypes )? ')'
                            {
                            dbg.location(51,14);
                            match(input,10,FOLLOW_10_in_methodPattern386); if (state.failed) return mep;
                            dbg.location(51,18);
                            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:51:18: (a= argTypes )?
                            int alt7=2;
                            try { dbg.enterSubRule(7);
                            try { dbg.enterDecision(7);

                            int LA7_0 = input.LA(1);

                            if ( (LA7_0==Identifier||LA7_0==13||(LA7_0>=17 && LA7_0<=26)) ) {
                                alt7=1;
                            }
                            } finally {dbg.exitDecision(7);}

                            switch (alt7) {
                                case 1 :
                                    dbg.enterAlt(1);

                                    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:51:19: a= argTypes
                                    {
                                    dbg.location(51,20);
                                    pushFollow(FOLLOW_argTypes_in_methodPattern391);
                                    a=argTypes();

                                    state._fsp--;
                                    if (state.failed) return mep;
                                    dbg.location(51,30);
                                    if ( state.backtracking==0 ) {
                                      mep.setArgTypePatterns(a);
                                    }

                                    }
                                    break;

                            }
                            } finally {dbg.exitSubRule(7);}

                            dbg.location(51,62);
                            match(input,11,FOLLOW_11_in_methodPattern398); if (state.failed) return mep;
                            dbg.location(51,66);
                            if ( state.backtracking==0 ) {
                              mayBeProperty=false;
                            }

                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(8);}


                    }
                    break;

            }
            } finally {dbg.exitSubRule(9);}

            dbg.location(53,1);
            if ( state.backtracking==0 ) {

                String s[] = names.toArray(new String[names.size()]);
                TypePattern t = new TypePattern(s);
                t.setSubClass(subClass);
                mep.setTypePattern(t);
                mep.setNamePattern(s[s.length-1]);
                mep.setMayBeProperty(mayBeProperty);

            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(61, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "methodPattern");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return mep;
    }
    // $ANTLR end "methodPattern"


    // $ANTLR start "argTypes"
    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:63:1: argTypes returns [List<TypePattern> pts] : c= classPattern ( ',' c= classPattern )* ;
    public final List<TypePattern> argTypes() throws RecognitionException {
        List<TypePattern> pts = null;

        TypePattern c = null;



          pts = new ArrayList<TypePattern>();

        try { dbg.enterRule(getGrammarFileName(), "argTypes");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(63, 1);

        try {
            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:67:5: (c= classPattern ( ',' c= classPattern )* )
            dbg.enterAlt(1);

            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:67:12: c= classPattern ( ',' c= classPattern )*
            {
            dbg.location(67,13);
            pushFollow(FOLLOW_classPattern_in_argTypes442);
            c=classPattern();

            state._fsp--;
            if (state.failed) return pts;
            dbg.location(67,28);
            if ( state.backtracking==0 ) {
              pts.add(c); 
            }
            dbg.location(68,13);
            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:68:13: ( ',' c= classPattern )*
            try { dbg.enterSubRule(10);

            loop10:
            do {
                int alt10=2;
                try { dbg.enterDecision(10);

                int LA10_0 = input.LA(1);

                if ( (LA10_0==12) ) {
                    alt10=1;
                }


                } finally {dbg.exitDecision(10);}

                switch (alt10) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:68:14: ',' c= classPattern
            	    {
            	    dbg.location(68,14);
            	    match(input,12,FOLLOW_12_in_argTypes460); if (state.failed) return pts;
            	    dbg.location(68,19);
            	    pushFollow(FOLLOW_classPattern_in_argTypes464);
            	    c=classPattern();

            	    state._fsp--;
            	    if (state.failed) return pts;
            	    dbg.location(68,34);
            	    if ( state.backtracking==0 ) {
            	      pts.add(c); 
            	    }

            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);
            } finally {dbg.exitSubRule(10);}


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(69, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "argTypes");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return pts;
    }
    // $ANTLR end "argTypes"


    // $ANTLR start "returnTypePattern"
    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:71:1: returnTypePattern returns [TypePattern tp] : c= classPattern ;
    public final TypePattern returnTypePattern() throws RecognitionException {
        TypePattern tp = null;

        TypePattern c = null;


        try { dbg.enterRule(getGrammarFileName(), "returnTypePattern");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(71, 1);

        try {
            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:72:5: (c= classPattern )
            dbg.enterAlt(1);

            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:72:7: c= classPattern
            {
            dbg.location(72,8);
            pushFollow(FOLLOW_classPattern_in_returnTypePattern493);
            c=classPattern();

            state._fsp--;
            if (state.failed) return tp;
            dbg.location(73,1);
            if ( state.backtracking==0 ) {

                tp = c;

            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        dbg.location(76, 5);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "returnTypePattern");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return tp;
    }
    // $ANTLR end "returnTypePattern"


    // $ANTLR start "classPattern"
    // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:78:1: classPattern returns [TypePattern tp] : (t= primitive | t= qualifiedName ( '+' )? ) ;
    public final TypePattern classPattern() throws RecognitionException {
        TypePattern tp = null;

        TypePattern t = null;


        try { dbg.enterRule(getGrammarFileName(), "classPattern");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(78, 1);

        try {
            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:79:5: ( (t= primitive | t= qualifiedName ( '+' )? ) )
            dbg.enterAlt(1);

            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:80:5: (t= primitive | t= qualifiedName ( '+' )? )
            {
            dbg.location(80,5);
            // C:\\groovy-ck1\\groovy-aop\\src\\Gapt.g:80:5: (t= primitive | t= qualifiedName ( '+' )? )
            int alt12=2;
            try { dbg.enterSubRule(12);
            try { dbg.enterDecision(12);

